--- a/test.html
+++ b/test.html
@@ -44,6 +44,7 @@
    <!-- <div id="box"></div> -->
     <div id="nav">
         <div class="nav-item">计算机部</div>
+        <div class="nav-item">电子部</div>
         
     </div>
     
